--- a/AnalyzerControlApp/AnalyzerControlGUI/MainWindow.xaml
+++ b/AnalyzerControlApp/AnalyzerControlGUI/MainWindow.xaml
@@ -4,9 +4,23 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AnalyzerControlGUI"
+        xmlns:vm="clr-namespace:AnalyzerControlGUI.ViewModels"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Управление базой данных анализатора v0.1" 
+        Height="450" Width="800"
+        WindowStartupLocation="CenterScreen">
+    <Window.DataContext>
+        <vm:mainViewModel/>
+    </Window.DataContext>
+    
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="200"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <StackPanel Orientation="Vertical" VerticalAlignment="Center">
+            <Button Content="Картриджи" Margin="3" Command="{Binding CartridgesManagementCommand}"/>
+            <Button Content="Типы анализов" Margin="3" Command="{Binding AnalysisTypesManagementCommand}"/>
+        </StackPanel>
     </Grid>
 </Window>
