--- a/AnalyzerControlApp/AnalyzerControlGUI/Views/AnalysisTypesWindow.xaml
+++ b/AnalyzerControlApp/AnalyzerControlGUI/Views/AnalysisTypesWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="AnalyzerControlGUI.Views.AnalysisTypesManagementWindow"
+﻿<Window x:Class="AnalyzerControlGUI.Views.AnalysisTypesWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
