--- a/AnalyzerControlApp/AnalyzerControlGUI/Views/EditAnalysisTypeWindow.xaml
+++ b/AnalyzerControlApp/AnalyzerControlGUI/Views/EditAnalysisTypeWindow.xaml
@@ -1,10 +1,12 @@
 ﻿<Window x:Class="AnalyzerControlGUI.Views.EditAnalysisTypeWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:sys="clr-namespace:System;assembly=mscorlib"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AnalyzerControlGUI.Views"
         xmlns:vm="clr-namespace:AnalyzerControlGUI.ViewModels"
+        xmlns:converters="clr-namespace:AnalyzerControlGUI.Converters"
         xmlns:services="clr-namespace:AnalyzerControlGUI.Services"
         services:DialogCloser.DialogResult="{Binding DialogResult}"
         mc:Ignorable="d"
@@ -15,6 +17,20 @@
     <Window.DataContext>
         <vm:EditAnalysisTypeViewModel/>
     </Window.DataContext>
+    <Window.Resources>
+        <x:Array x:Key="AnalysisStages" Type="sys:String">
+            <sys:String>Sampling</sys:String>
+            <sys:String>Conjugate</sys:String>
+            <sys:String>EnzymeComplex</sys:String>
+            <sys:String>Substrate</sys:String>
+        </x:Array>
+        <x:Array x:Key="YesOrNoVariants" Type="sys:String">
+            <sys:String>Да</sys:String>
+            <sys:String>Нет</sys:String>
+        </x:Array>
+        <converters:BoolToIndexConverter x:Key="boolToIndexConverter" />
+    </Window.Resources>
+    
     <Grid>
         <Grid>
             <Grid.RowDefinitions>
@@ -42,40 +58,39 @@
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                             <TextBlock Text="Стадия" VerticalAlignment="Center"  Margin="3" FontWeight="Bold"/>
                             <ComboBox HorizontalContentAlignment="Center" Width="200" Margin="3"
-                                      SelectedIndex="0" >
+                                      ItemsSource="{Binding Source={StaticResource AnalysisStages}}" 
+                                      SelectedIndex="{Binding SelectedStage, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" >
                             </ComboBox>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                             <TextBlock Text="Pipetting Volume" Margin="3" FontWeight="Bold"/>
-                            <TextBox Text="{Binding PipettingVolume}" Margin="3" Width="200"/>
+                            <TextBox Text="{Binding PipettingVolume, UpdateSourceTrigger=PropertyChanged}" Margin="3" Width="200"/>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal" 
                                     HorizontalAlignment="Right">
                             <TextBlock Text="Need Incubation?" Margin="3" FontWeight="Bold" 
                                        VerticalAlignment="Center"/>
                             <ComboBox HorizontalContentAlignment="Center" Width="200" Margin="3"
-                                      SelectedIndex="0" >
-                                <TextBlock Text="Yes"/>
-                                <TextBlock Text="No"/>
+                                      ItemsSource="{Binding Source={StaticResource YesOrNoVariants}}"
+                                      SelectedIndex="{Binding NeedIncubation, Converter={StaticResource boolToIndexConverter}}" >
                             </ComboBox>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                             <TextBlock Text="Incubation Time (min)" Margin="3" FontWeight="Bold"/>
-                            <TextBox Text="{Binding IncubationTime}" Margin="3" Width="200"/>
+                            <TextBox Text="{Binding IncubationTimeInMinutes}" Margin="3" Width="200"/>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal" 
                                     HorizontalAlignment="Right">
                             <TextBlock Text="Need Wash Step?" Margin="3" FontWeight="Bold" 
                                        VerticalAlignment="Center"/>
                             <ComboBox HorizontalContentAlignment="Center" Width="200" Margin="3"
-                                      SelectedIndex="0" >
-                                <TextBlock Text="Yes"/>
-                                <TextBlock Text="No"/>
+                                      ItemsSource="{Binding Source={StaticResource YesOrNoVariants}}"
+                                      SelectedIndex="{Binding NeedWashStep, Converter={StaticResource boolToIndexConverter}}" >
                             </ComboBox>
                         </StackPanel>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Right">
                             <TextBlock Text="Number of wash step" Margin="3" FontWeight="Bold"/>
-                            <TextBox Text="{Binding WashingTime}" Margin="3" Width="200"/>
+                            <TextBox Text="{Binding NumberOfWashStep}" Margin="3" Width="200"/>
                         </StackPanel>
                     </StackPanel>
                 </StackPanel>
