--- a/AnalyzerControlApp/AnalyzerControlGUI/App.xaml
+++ b/AnalyzerControlApp/AnalyzerControlGUI/App.xaml
@@ -3,8 +3,8 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:AnalyzerControlGUI"
              xmlns:views="clr-namespace:AnalyzerControlGUI.Views"
-             StartupUri="MainWindow.xaml">
+             StartupUri="AnalyzerControlWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary Source="./Resources/Styles.xaml"></ResourceDictionary>
     </Application.Resources>
 </Application>
