--- a/AnalyzerControlApp/AnalyzerControlGUI/App.xaml
+++ b/AnalyzerControlApp/AnalyzerControlGUI/App.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:AnalyzerControlGUI"
              xmlns:views="clr-namespace:AnalyzerControlGUI.Views"
-             StartupUri="AnalyzerControlWindow.xaml">
+             StartupUri="views/Windows/AnalyzerControlWindow.xaml">
     <Application.Resources>
         <ResourceDictionary Source="./Resources/Styles.xaml"></ResourceDictionary>
     </Application.Resources>
