--- a/AnalyzerControlApp/AnalyzerControlGUI/Views/CustomViews/CartridgeCassetteControl.xaml
+++ b/AnalyzerControlApp/AnalyzerControlGUI/Views/CustomViews/CartridgeCassetteControl.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:AnalyzerControlGUI.Views.CustomViews"
              mc:Ignorable="d" 
-             d:DesignHeight="75" d:DesignWidth="50" Width="100" Height="100">
+             d:DesignHeight="75" d:DesignWidth="50" Width="95" Height="100">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="75"/>
@@ -18,7 +18,8 @@
                    HorizontalAlignment="Center" 
                    Height="75" Width="50"/>
         <Rectangle Grid.Row="0" 
-                   x:Name="Status" 
+                   x:Name="Status"
+                   Fill="White"
                    HorizontalAlignment="Center" 
                    VerticalAlignment="Bottom" 
                    Height="71" Width="46" 
@@ -29,7 +30,7 @@
                    VerticalAlignment="Center" 
                    HorizontalAlignment="Center" 
                    Height="71" Width="46"/>
-        <Label Grid.Row="0" 
+            <Label Grid.Row="0" 
                x:Name="LabelCount" 
                HorizontalAlignment="Center" 
                VerticalAlignment="Center"/>
